testsuite/tests/typing-layouts/immediates_disabled.compilers.reference
File "immediates.ml", line 29, characters 9-18:
29 | type a : immediate = A | B | C
              ^^^^^^^^^
Error: The appropriate layouts extension is not enabled.
       You must enable -extension layouts to use this feature.
